--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -12,37 +12,82 @@
 
   <style type="text/css">
 
-    * {
-      padding: 0;
-      margin: 0;
-      border: 0;
-    }
 
-    body {
-	  background: #fff;
-      padding: 15px;
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
+	canvas{
+	  width: 100% !important;
+      max-width: 280px;
+      height: 100% !important;
+	}
 
-    #demo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      visibility: hidden;
-      cursor: hand;
-      cursor: -moz-grab;
-      cursor: -webkit-grab;
-      cursor: grab;
-    }
+	header {
+	  position:absolute;
+	  z-index:0;
+	  top:0; left:0; right:0;
+	  height:10rem;
+	  transition:transform .5s, opacity .3s;
+	  background-size:cover;
+	}
 
-    #demo p {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 0 20px;
-      margin-bottom: 15px;
-    }
+	.card {
+	  padding:0.25rem 1rem;
+	  box-shadow:0 1px 2px #aaa;
+	  background:white;
+	  margin: 1.5rem 1rem;
+	  border-radius:3px;
+	  user-select:none;
+	  animation:fly-in-from-left .5s 1s ease both;
+	  transform-origin:top left;
+	}
+	.card:nth-child(even){
+	  animation-name:fly-in-from-right;
+	  animation-delay:1.1s;
+	 transform-origin:top right;
+	}
+
+	@keyframes fly-in-from-left {
+	  from {
+	    transform:translateY(15rem) rotate(15deg);
+	    opacity:0;
+	  }
+	}
+
+	@keyframes fly-in-from-right {
+	  from {
+	    transform:translateY(15rem) rotate(-15deg);
+	    opacity:0;
+	  }
+	}
+
+	.card:after {
+	  position:absolute;
+	  font-size:.9rem;
+	  top:1.5rem;
+	  right:1rem;
+	  border:thin solid gray;
+	  color:gray;
+	  width:1rem;
+	  line-height:1rem;
+	  text-align:center;
+	  border-radius:50%;
+	  pointer-events:none;
+	}
+
+	h1 {
+	  font-size:2rem;
+	  font-weight:200;
+	  margin-top:11px;
+	}
+	  strong {
+	    font-weight:500;
+	    color:#ff9f33;
+	  }
+
+	h2 {
+	  font-size:.9rem;
+	  line-height:2.5;
+	  color:gray;
+	  font-weight:400;
+	}
 
   </style>
 
@@ -53,27 +98,151 @@
 	  <span class="ion-ios7-arrow-thin-left"></span>&nbsp;SWIPE TO VIEW MORE&nbsp;<span class="ion-ios7-arrow-thin-right"></span>
 	</div>	
 
-	<div class="owl-carousel" style="margin: -15px 0px 0px 0px;">
-    	<div class="owl-item">
-			<div id="interpersonalDimension" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
-			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others.</p> 
-      		<p>Research shows that many people feel that being relatively good at one of these comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example; or appearing cooperative might be misread as weakness.) Nevertheless, some people feel equally good at both skills.</p>
+	<div class="owl-carousel" style="margin: 10px 0px 0px 0px;">
+ 
+   		<div class="owl-item">
+			<section class="card">
+				<h1>Relational Dimension</h1>
+				<canvas id="canvas"></canvas>
+			</section>
+			<section class="card">
+				<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others.</p> 
+      			<p>Research shows that many people feel that being relatively good at one of these comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example; or appearing cooperative might be misread as weakness.) Nevertheless, some people feel equally good at both skills.</p>
+			</section>
 		</div>
+
 		<div class="owl-item">	
-			<div id="outcomeDimension" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
-			<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it.</p>
-      		<p>In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they may get most of it.</p>
+			<section class="card">
+				<h1>Outcome Dimension</h1>
+				<canvas id="canvas2"></canvas>
+			</section>
+			<section class="card">
+				<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it.</p>
+	      		<p>In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they may get most of it.</p>
+			</section>
 		</div>
+
       	<div class="owl-item">
-			<div id="equalRatings" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
-			<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>.</p>
-      		<p>Putting the two scales together reveals common bargaining styles. The lines in the diagram intersect at the 0-0. The example here is for a user who has a rating of 4 for the four skills (counting out from the center for each one).</p>
-      		<p>That balance may look nice, but some situations demand certain skills more than others.</p>
+			<section class="card">			
+				<h1>Linking Means and Ends</h1>
+				<canvas id="canvas3"></canvas>
+			</section>
+			<section class="card">			
+				<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>.</p>
+	      		<p>Putting the two scales together reveals common bargaining styles. The lines in the diagram intersect at the 0-0. The example here is for a user who has a rating of 4 for the four skills (counting out from the center for each one).</p>
+	      		<p>That balance may look nice, but some situations demand certain skills more than others.</p>
+			</section>
       	</div>
 	</div>
 
   <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+  <script src="Chart.js"></script>
+
+	<script>
+	var radarChartData = {
+		labels: ['', 'Empathy', '', 'Assert'],
+		datasets: [
+			{
+				label: "My Negotiation Profile",
+				fillColor: "rgba(255,159,51,0.2)",
+				strokeColor: "rgba(255,159,51,1)",
+				pointColor: "rgba(255,159,51,1)",
+				pointStrokeColor: "#fff",
+				pointHighlightFill: "#fff",
+				pointHighlightStroke: "rgba(255,159,51,1)",
+				data: [0,8,0,8]
+			}
+		]
+	};
+
+	var radarChartData2 = {
+		labels: ['Creating Value', '', 'Claiming Value', ''],
+		datasets: [
+			{
+				label: "My Negotiation Profile",
+				fillColor: "rgba(255,159,51,0.2)",
+				strokeColor: "rgba(255,159,51,1)",
+				pointColor: "rgba(255,159,51,1)",
+				pointStrokeColor: "#fff",
+				pointHighlightFill: "#fff",
+				pointHighlightStroke: "rgba(255,159,51,1)",
+				data: [8,0,8,0]
+			}
+		]
+	};
+
+	var radarChartData3 = {
+		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		datasets: [
+			{
+				label: "My Negotiation Profile",
+				fillColor: "rgba(255,159,51,0.2)",
+				strokeColor: "rgba(255,159,51,1)",
+				pointColor: "rgba(255,159,51,1)",
+				pointStrokeColor: "#fff",
+				pointHighlightFill: "#fff",
+				pointHighlightStroke: "rgba(255,159,51,1)",
+				data: [4,4,4,4]
+			}
+		]
+	};
+	
+	window.onload = function(){
+		var ctx = document.getElementById("canvas").getContext("2d");
+		window.myRadarChart = new Chart(ctx).Radar(radarChartData, {
+			responsive: false,
+			maintainAspectRatio: true,
+			showScale: true,
+			scaleShowLine : false,
+			scaleShowLabels : false,
+			pointLabelFontSize : 12,
+			pointLabelFontFamily : "'Helvetica Neue'",
+			pointLabelFontColor : "gray",
+		    animationSteps: 600,
+		    scaleOverride: true,
+		    scaleSteps: 2,
+		    scaleStepWidth: 4,
+		    scaleStartValue: 0,
+		    showTooltips: false		
+		});
+		var ctx2 = document.getElementById("canvas2").getContext("2d");
+		window.myRadarChart = new Chart(ctx2).Radar(radarChartData2, {
+			responsive: false,
+			maintainAspectRatio: false,
+			showScale: true,
+			scaleShowLine : false,
+			scaleShowLabels : false,
+			pointLabelFontSize : 12,
+			pointLabelFontFamily : "'Helvetica Neue'",
+			pointLabelFontColor : "gray",
+		    animationSteps: 800,
+		    scaleOverride: true,
+		    scaleSteps: 2,
+		    scaleStepWidth: 4,
+		    scaleStartValue: 0,
+		    showTooltips: false
+		});
+		var ctx3 = document.getElementById("canvas3").getContext("2d");
+		window.myRadarChart = new Chart(ctx3).Radar(radarChartData3, {
+			responsive: false,
+			maintainAspectRatio: false,
+			showScale: true,
+			scaleShowLine : false,
+			scaleShowLabels : false,
+			pointLabelFontSize : 12,
+			pointLabelFontFamily : "'Helvetica Neue'",
+			pointLabelFontColor : "gray",
+		    animationSteps: 1000,
+		    scaleOverride: true,
+		    scaleSteps: 2,
+		    scaleStepWidth: 4,
+		    scaleStartValue: 0,
+		    showTooltips: true
+		});
+	}
+
+	</script>
 
   <script>
 
@@ -85,12 +254,6 @@
 	});
 	
   </script>
-
-  <script src="highcharts.js"></script>
-  <script src="highcharts-more.js"></script>
-  <script src="charts-examples.js"></script>
-  <script src="minimal.js"></script>
-  <script src="modules/exporting.js"></script>
 
 </body>
 </html>
