--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -20,16 +20,90 @@
 		.popover{
 		    width:200px;
 		}
+		canvas{
+		  width: 100% !important;
+	      max-width: 280px;
+	      height: 100% !important;
+		}
+
+		header {
+		  position:absolute;
+		  z-index:0;
+		  top:0; left:0; right:0;
+		  height:10rem;
+		  transition:transform .5s, opacity .3s;
+		  background-size:cover;
+		}
+
+		.card {
+		  padding:1rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+		.card:nth-child(even){
+		  animation-name:fly-in-from-right;
+		  animation-delay:1.1s;
+		 transform-origin:top right;
+		}
+
+		@keyframes fly-in-from-left {
+		  from {
+		    transform:translateY(15rem) rotate(15deg);
+		    opacity:0;
+		  }
+		}
+
+		@keyframes fly-in-from-right {
+		  from {
+		    transform:translateY(15rem) rotate(-15deg);
+		    opacity:0;
+		  }
+		}
+
+		.card:after {
+		  position:absolute;
+		  font-size:.9rem;
+		  top:1.5rem;
+		  right:1rem;
+		  border:thin solid gray;
+		  color:gray;
+		  width:1rem;
+		  line-height:1rem;
+		  text-align:center;
+		  border-radius:50%;
+		  pointer-events:none;
+		}
+
+		h1 {
+		  font-size:2rem;
+		  font-weight:200;
+		  margin-top:11px;
+		}
+		h2 {
+		  font-size:1.25rem;
+		  color:#ff9f33;
+		  font-weight:400;
+		  margin-top:0px;
+		}
+		
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-7.png" width="115px" height="115px" class="img-circle">
-	</div>
 	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate your overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
-	<p style="margin: 20px; font-size: 14px;">Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whether other parties are cooperative or competitive.</p>
-    <p style="margin: 20px; font-size: 14px;">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
+		<section class="card">
+			<p>You rated yourself <strong style="color:#ff9f33">%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate your overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
+		</section>
+		<section class="card">
+			<p>Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whether other parties are cooperative or competitive.</p>
+		</section>
+		<section class="card">
+    		<p>Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
+		</section>
     <p style="margin: 20px; font-size: 14px;"><strong>Here are some tips for improving your effectiveness:</strong></p>
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 20px;">
@@ -101,31 +175,12 @@
 		    </ul>
 	    </div>
 	  </div>
-	<div class="panel panel-success">
-	    <div class="panel-heading" style="background-color: #2ee478;border-color: #2ee478;">
-	      <h4 class="panel-title">
-	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
-	          <strong><span data-icon="&#xe049;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Bonus tip</strong>
-	        </a>
-	      </h4>
-	    </div>
-	    <div id="collapseFive" class="panel-collapse collapse">
-			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">For on-going learning and improvement, use this app <strong>before and after</strong> every negotiation you undertake. It will save your profile each time so that you can compare your intended approach with how the process unfolded. When you review, identify what worked well and see what you might do differently in the future.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus especially on skills that aren't your natural strengths. Use the tips in this app and from other resources, as well. Get honest feedback from friends and colleagues. In turn, they likely will appreciate coaching from you.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Finally, monitor your agility over time. Some situations may call for you to be more assertive. Others may offer opportunities for value creation. As you track your progress, see how successful you are at tailoring your approach to the matter at hand and to the people with whom you are negotiating.</li>
-		    </ul>
-	    </div>
-	  </div>
 	</div>
 	
 	<div style="height:100px">
 	</div>
 
     <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="modules/exporting.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/collapse.js"></script>
     <script src="js/popover.js"></script>
