--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -5,172 +5,171 @@
 	<link rel="stylesheet" href="css/style.css" />
   <style type="text/css">
 
-    * {
-      padding: 0;
-      margin: 0;
-      border: 0;
-    }
 
-    body {
-	  background: #fff;
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
+	canvas{
+	  width: 100% !important;
+      max-width: 280px;
+      height: 100% !important;
+	}
 
-    #demo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      visibility: hidden;
-      cursor: hand;
-      cursor: -moz-grab;
-      cursor: -webkit-grab;
-      cursor: grab;
-    }
+	header {
+	  position:absolute;
+	  z-index:0;
+	  top:0; left:0; right:0;
+	  height:10rem;
+	  transition:transform .5s, opacity .3s;
+	  background-size:cover;
+	}
 
-    #demo p {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 0 20px;
-      margin-bottom: 15px;
-    }
+	.card {
+	  padding:1rem 1rem;
+	  box-shadow:0 1px 2px #aaa;
+	  background:white;
+	  margin: 1.5rem 1rem;
+	  border-radius:3px;
+	  user-select:none;
+	  animation:fly-in-from-left .5s 1s ease both;
+	  transform-origin:top left;
+	}
+	.card:nth-child(even){
+	  animation-name:fly-in-from-right;
+	  animation-delay:1.1s;
+	 transform-origin:top right;
+	}
+
+	@keyframes fly-in-from-left {
+	  from {
+	    transform:translateY(15rem) rotate(15deg);
+	    opacity:0;
+	  }
+	}
+
+	@keyframes fly-in-from-right {
+	  from {
+	    transform:translateY(15rem) rotate(-15deg);
+	    opacity:0;
+	  }
+	}
+
+	.card:after {
+	  position:absolute;
+	  font-size:.9rem;
+	  top:1.5rem;
+	  right:1rem;
+	  border:thin solid gray;
+	  color:gray;
+	  width:1rem;
+	  line-height:1rem;
+	  text-align:center;
+	  border-radius:50%;
+	  pointer-events:none;
+	}
+
+	h1 {
+	  font-size:2rem;
+	  font-weight:200;
+	  margin-top:11px;
+	}
+	  strong {
+	    font-weight:500;
+	    color:#ff9f33;
+	  }
+
+	h2 {
+	  font-size:1.25rem;
+	  color:#ff9f33;
+	  font-weight:400;
+	  margin-top:0px;
+	}
 
   </style>
 
 </head>
 <body>
-	<div id="container" style="margin: 10px auto 10px; width: 280px; height: 280px"></div>
 	
 	<div>
-		<p style="margin: 20px; font-size: 14px;">The ratings you entered most closely match those of <strong>%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong>%@</strong></i>.)</p>
-
-		<p style="margin: 20px; font-size: 14px;">%@</p>
+		<section class="card">
+			<p>The ratings you entered most closely match those of <strong style="color:#445ae1">%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong style="color:#DF5353">%@</strong></i>.)</p>
+			<canvas id="canvas"></canvas>
+			<p>%@</p>
+		</section>
 		
-		<p style="margin: 20px; font-size: 14px;">Also, consider the following questions:</p>
+		<section class="card">
+			<h2>Consider the following questions:</h2>
+			<ol style="margin: 10px 0px 10px -20px; font-size: 13px;">
+				<li>Is this profile a good fit for most of the negotiations you do?</li><br>
+				<li>If you had to choose, where should your biggest strength be?</li><br>
+				<li>How flexible are you; that is, can you vary your approach according to the situation and the styles of different people you deal with?</li>
+			</ol>
+		</section>
 
-		<ol style="margin: 20px 20px 20px 40px; font-size: 14px;">
-			<li>Is this profile a good fit for most of the negotiations you do?</li><br>
-			<li>If you had to choose, where should your biggest strength be?</li><br>
-			<li>How flexible are you; that is, can you vary your approach according to the situation and the styles of different people you deal with?</li>
-		</ol>
-		
-	</div>
-
-	<div class="alert alert-info" style="margin: 20px;">
+	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe030;" style="font-size: 24px"></span>
+				<span data-icon="&#xe030;" style="font-size: 24px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
 				Go read the Skill-Building Tips section to learn how you can improve your skills.
 			</div>
 		</div>
-	</div>
+	</section>
 	
 	<div style="height:100px">
 	</div>
 	
     <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="modules/exporting.js"></script>
-    <script src="minimal.js"></script>
-    <script>
-	$(function () {
+  <script src="Chart.js"></script>
 
-	    $('#container').highcharts({
+	<script>
+	var radarChartData = {
+		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		datasets: [
+		{
+			label: "My First dataset",
+			fillColor: "rgba(255,159,51,0.2)",
+			strokeColor: "rgba(255,159,51,1)",
+			pointColor: "rgba(255,159,51,1)",
+			pointStrokeColor: "#fff",
+			pointHighlightFill: "#fff",
+			pointHighlightStroke: "rgba(255,159,51,1)",
+			data: [%@, %@, %@, %@]
+		},
+		{
+			label: "%@",
+			fillColor: "rgba(68,90,225,0.2)",
+			strokeColor: "rgba(68,90,225,1)",
+			pointColor: "rgba(68,90,225,1)",
+			pointStrokeColor: "#fff",
+			pointHighlightFill: "#fff",
+			pointHighlightStroke: "rgba(68,90,225,1)",
+			data: [%@, %@, %@, %@]
+		}
+		]
+	};
 
-	        chart: {
-	            polar: true,
-	            borderColor: '#34aadc',
-	            borderWidth: 2,
-	            type: 'line'
-	        },
-
-	        legend: {
-	            enabled: true,
-				margin: 20
-	        },
 
 
-	        title: {
-	            text: null,
-		        margin: 15
-	        },
+	window.onload = function(){
+		var ctx = document.getElementById("canvas").getContext("2d");
+		window.myRadarChart = new Chart(ctx).Radar(radarChartData, {
+			responsive: false,
+			maintainAspectRatio: true,
+			showScale: true,
+			scaleShowLine : false,
+			scaleShowLabels : false,
+			pointLabelFontSize : 12,
+			pointLabelFontFamily : "'Helvetica Neue'",
+			pointLabelFontColor : "gray",
+		    animationSteps: 600,
+		    scaleOverride: true,
+		    scaleSteps: 2,
+		    scaleStepWidth: 4,
+		    scaleStartValue: 0,
+		    showTooltips: false		
+		});
+	}
 
-	        pane: {
-	            size: '14%',
-		        startAngle: -45,
-	        },
-
-	        xAxis: {
-	            categories: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
-	            tickmarkPlacement: 'on',
-	            lineWidth: 0,
-				labels: {
-					style: {
-						whiteSpace: 'nowrap'
-					}
-				}
-	        },
-
-	        yAxis: {
-	            lineWidth: 0,
-				tickInterval: 4,
-				step: 2,
-	            endOnTick: false,
-				endOnTick: true,
-	            showLastLabel: true,
-	            startOnTick: true
-	        },
-
-	        tooltip: {
-	            enabled: false
-	        },
-
-			credits: {
-	            enabled: false
-	         },
-
-	        navigation: {
-	            buttonOptions: {
-	                enabled: false
-	            }
-	        },
-
-	        plotOptions: {
-	            series: {
-	                fillOpacity: 0.33,
-	                marker: {
-	                    fillColor: '#FFFFFF',
-	                    lineWidth: 2,
-	                    lineColor: null // inherit from series
-	                }
-	            },
-	        },
-
-	        series: [{
-	            name: 'Your Responses',
-	            type: 'area',
-	            data: [%@, %@, %@, %@],
-				lineWidth: 5,
-	            animation: {
-	                duration: 1000
-	            }, 
-	        },	{
-		            name: '%@',
-		            type: 'area',
-		            data: [%@, %@, %@, %@],
-					lineWidth: 5,
-		            animation: {
-		                duration: 2000
-		            }, 
-		        }]
-
-	    });
-	});		
-    </script>
+	</script>
 
 
 </body>
