--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -89,14 +89,14 @@
 	
 	<div>
 		<section class="card">
-			<p>The ratings you entered most closely match those of <strong style="color:#445ae1">%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong style="color:#DF5353">%@</strong></i>.)</p>
+			<p style="font-size:14px">The ratings you entered most closely match those of <strong style="color:#445ae1">%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong style="color:#DF5353">%@</strong></i>.)</p>
 			<canvas id="canvas"></canvas>
-			<p>%@</p>
+			<p style="font-size:14px">%@</p>
 		</section>
 		
 		<section class="card">
-			<h2>Consider the following questions:</h2>
-			<ol style="margin: 10px 0px 10px -20px; font-size: 13px;">
+			<h2>Consider the following questions</h2>
+			<ol style="margin: 10px 0px 10px -20px; font-size: 14px;">
 				<li>Is this profile a good fit for most of the negotiations you do?</li><br>
 				<li>If you had to choose, where should your biggest strength be?</li><br>
 				<li>How flexible are you; that is, can you vary your approach according to the situation and the styles of different people you deal with?</li>
