--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -3,66 +3,203 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-6.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+		canvas{
+		  width: 100% !important;
+	      max-width: 280px;
+	      height: 100% !important;
+		}
+
+		header {
+		  position:absolute;
+		  z-index:0;
+		  top:0; left:0; right:0;
+		  height:10rem;
+		  transition:transform .5s, opacity .3s;
+		  background-size:cover;
+		}
+
+		.topcard {
+		  padding:1rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.selfasesscard {
+		  padding:1rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.scorecardcard {
+		  padding:1rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.bestpracticescard {
+		  padding:1rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.card {
+		  padding:1rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+		.card:nth-child(even){
+		  animation-name:fly-in-from-right;
+		  animation-delay:1.1s;
+		 transform-origin:top right;
+		}
+
+		@keyframes fly-in-from-left {
+		  from {
+		    transform:translateY(15rem) rotate(15deg);
+		    opacity:0;
+		  }
+		}
+
+		@keyframes fly-in-from-right {
+		  from {
+		    transform:translateY(15rem) rotate(-15deg);
+		    opacity:0;
+		  }
+		}
+
+		.card:after {
+		  position:absolute;
+		  font-size:.9rem;
+		  top:1.5rem;
+		  right:1rem;
+		  border:thin solid gray;
+		  color:gray;
+		  width:1rem;
+		  line-height:1rem;
+		  text-align:center;
+		  border-radius:50%;
+		  pointer-events:none;
+		}
+
+		h1 {
+		  font-size:2rem;
+		  font-weight:200;
+		  margin-top:11px;
+		}
+		  strong {
+		    font-weight:500;
+		    color:#ff9f33;
+		  }
+
+		h2 {
+		  font-size:1.25rem;
+		  color:#ff9f33;
+		  font-weight:400;
+		  margin-top:0px;
+		}
+
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-6.png" width="115px" height="115px" class="img-circle">
-	</div>
     
 	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
+		<section class="topcard">
+			<div align="center">
+		        <img src="image-6.png" width="100px" height="100px" class="img-circle">
+			</div>
+			<p style="font-size: 14px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
 
-		<ul style="margin: 20px 20px 20px 0px; font-size: 14px;">
-			<li>reaching agreements that might slip through most people's fingers</li>
-			<li>crafting value-creating solutions</li>
-			<li>resolving small differences before they become costly disputes</li>
-		</ul>
+			<ul style="margin: 10px 0px 10px -20px; font-size: 14px;">
+				<li>reaching agreements that might slip through most people's fingers</li>
+				<li>crafting value-creating solutions</li>
+				<li>resolving small differences before they become costly disputes</li>
+			</ul>
+		</section>
+		
+		<section class="card">
+			<p style="font-size: 14px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
+			<p style="font-size: 14px;">Great negotiators also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
+		</section>
 
-		<p style="margin: 20px; font-size: 14px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills.</p>
+		<section class="card">
+			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify skills you can build on, as well as other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
+		</section>
 
-		<p style="margin: 20px; font-size: 14px;">Great negotiators also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
+		<section class="selfasesscard">
+			<div style="height:75px"></div>
+			<p style="font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile that reflects your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
+		</section>
 
-		<p style="margin: 20px; font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify skills you can build on, as well as other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
+		<section class="scorecardcard">
+			<div style="height:75px"></div>
+			<p style="font-size: 14px;">The <strong>Scorecard</strong> feature enables you to do an after-action-review of every negotiation you undertake, large or small. It enables you to draw the right lessons from your own on-going experience.</p>
+		</section>
 
-		<p style="margin: 20px; font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile that reflects your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
-
-		<p style="margin: 20px; font-size: 14px;">The <strong>Scorecard</strong> feature enables you to do an after-action-review of every negotiation you undertake, large or small. It enables you to draw the right lessons from your own on-going experience.</p>
-				
-		<p style="margin: 20px; font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you’ve learned from prior experience so that you can continue to enhance your strategic and interpersonal skills. Remember to consult the Resource section, as well, that points you to other sources of valuable negotiation advice.</p>
+		<section class="bestpracticescard">
+			<div style="height:75px"></div>
+			<p style="font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you've learned from prior experience so that you can continue to enhance your strategic and interpersonal skills. Remember to consult the <strong>Resources</strong> section, as well, that points you to other sources of valuable negotiation advice.</p>
+		</section>
 
 	</div>
 		 
 			
-	<div class="alert alert-info" style="margin:20px">
+	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe032;" style="font-size: 24px"></span>
+				<span data-icon="&#xe032;" style="font-size: 24px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
 				To begin, tap <strong>Next</strong> above and take the short self-assessment test. Then analyze your feedback and review the tips for making better deals. 
 			</div>
 		</div>
-	</div>
+	</section>
 	
 	<div style="height:100px">
 	</div>
 		
 			
     <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="modules/exporting.js"></script>
 </body>
 </html>
