--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -3,34 +3,104 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
+    <link rel="stylesheet" href="styles.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-1.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+			canvas{
+			  width: 100% !important;
+		      max-width: 280px;
+		      height: 100% !important;
+			}
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.card {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  background-image: url("top-banner-1.png");
+			  background-repeat: no-repeat;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			  margin-top:11px;
+			}
+			h2 {
+			  font-size:1.25rem;
+			  color:#ff9f33;
+			  font-weight:400;
+			  margin-top:0px;
+			}
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="mw.jpg" width="115px" height="115px" class="img-circle">
-	</div>
 	<div>
-        <p style="margin: 15px 20px 20px 20px; font-size: 14px;">
-            <strong>Michael Wheeler</strong> is an award-winning author, professor, and adviser whose work is at the forefront of negotiation scholarship and practice. For more than twenty years at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> he has taught negotiation to thousands of MBA students and executive program participants. He also counsels corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.</p>
+		<section class="card">
+			<div align="center">
+		        <img src="mw.jpg" width="100px" height="100px" class="img-circle">
+			</div>
+        	<p style="font-size:14px"><strong>Michael Wheeler</strong> is an award-winning author, professor, and adviser whose work is at the forefront of negotiation scholarship and practice. For more than twenty years at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> he has taught negotiation to thousands of MBA students and executive program participants. He also counsels corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.</p>
+			<div class="list-group" style="font-weight:400">
+		      <a href="http://www.negotiation3-0.com/" class="list-group-item">Negotiation 3.0 Website</a>
+		      <a href="https://www.linkedin.com/today/influencer/266437464-Michael-Wheeler"  class="list-group-item">LinkedIn Influencer Blog</a>
+		      <a href="http://www.amazon.com/The-Art-Negotiation-Improvise-Agreement/dp/1451690428"  class="list-group-item"><i>The Art of Negotiation</i> Book</a>
+		    </div>    
+		</section>
     </div>
-
-    <div class="list-group" style="font-weight:400">
-      <a href="http://www.negotiation3-0.com/" class="list-group-item">Negotiation 3.0 Website</a>
-      <a href="https://www.linkedin.com/today/influencer/266437464-Michael-Wheeler"  class="list-group-item">LinkedIn Influencer Blog</a>
-      <a href="http://www.amazon.com/The-Art-Negotiation-Improvise-Agreement/dp/1451690428"  class="list-group-item"><i>The Art of Negotiation</i> Book</a>
-    </div>    
-
 	<div style="height:100px">
 	</div>
     
