--- a/Negotiation3/reports/scorecard-intro.html
+++ b/Negotiation3/reports/scorecard-intro.html
@@ -3,44 +3,130 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-11.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+			canvas{
+			  width: 100% !important;
+		      max-width: 280px;
+		      height: 100% !important;
+			}
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.topcard {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  background-image: url("top-banner-11.png");
+			  background-repeat: no-repeat;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			  margin-top:11px;
+			}
+			  strong {
+			    font-weight:500;
+			    color:#ff9f33;
+			  }
+			h2 {
+			  font-size:1.25rem;
+			  color:#ff9f33;
+			  font-weight:400;
+			  margin-top:0px;
+			}
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-11.png" width="115px" height="115px" class="img-circle">
-	</div>
-    
-	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. Your after-action-review won't take long, but the payoff can be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-11.png" width="100px" height="100px" class="img-circle">
+		</div>
+		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. Your after-action-review won't take long, but the payoff can be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
+	</section>
+	
+	<section class="card">
+		<p style="font-size: 14px;">Focus your answers on the negotiation process-what you did and said-not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
+	</section>
+	
+	<section class="card">
+		<p style="font-size: 14px;">Don't be overly self-critical or engage in 20-20 hindsight. Make sure you note what you did well, not simply areas where you wish you did better. Start by jotting down some basic information about this particular negotiation, so you can easily review your scorecard later. Then you'll be asked to review how you managed various aspects of the process.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Focus your answers on the negotiation process-what you did and said-not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
-
-		<p style="margin: 20px; font-size: 14px;">Don't be overly self-critical or engage in 20-20 hindsight. Make sure you note what you did well, not simply areas where you wish you did better. Start by jotting down some basic information about this particular negotiation, so you can easily review your scorecard later. Then you'll be asked to review how you managed various aspects of the process.</p>
-
-	</div>
+	</section>
 		 
-			
-	<div class="alert alert-info" style="margin:20px">
+	<section class="card">			
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe032;" style="font-size: 24px"></span>
+				<span data-icon="&#xe032;" style="font-size: 24px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
 				To begin, tap <strong>Next</strong> above and enter the details of your most recent negotiation. Then analyze your feedback and review the tips for making better deals. 
 			</div>
 		</div>
-	</div>
+	</section>
 	
 	<div style="height:100px">
 	</div>
