--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -3,42 +3,132 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-12.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+			canvas{
+			  width: 100% !important;
+		      max-width: 280px;
+		      height: 100% !important;
+			}
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.topcard {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  background-image: url("top-banner-12.png");
+			  background-repeat: no-repeat;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			  margin-top:11px;
+			}
+			  strong {
+			    font-weight:500;
+			    color:#ff9f33;
+			  }
+			h2 {
+			  font-size:1.25rem;
+			  color:#ff9f33;
+			  font-weight:400;
+			  margin-top:0px;
+			}
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-12.png" width="115px" height="115px" class="img-circle">
-	</div>
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-12.png" width="100px" height="100px" class="img-circle">
+		</div>
     
     
 	<div>
-		<p style="margin: 15px 20px 5px 20px; font-size: 16px;"><strong>Negotiation Name</strong>: %@</p>
+		<p style="font-size: 16px;"><strong>%@</strong></p>
 
-		<p style="margin: 5px 20px 20px 20px; font-size: 14px;">Scorecard created %@</p>
+		<p style="font-size: 14px;">Scorecard created %@</p>
 
 	</div>
+	</section>
 		 
-	<div>
+	<section class="card">
+	  <p><strong>What Worked Well?</strong></p>
 		<ul class="list-group" >
-		  <li class="list-group-item" style="font-size: 14px; text-align: left"><strong>What Worked Well?</strong></li>
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
-		  <li class="list-group-item" style="font-size: 14px; text-align: left"><strong>What Would I Do Differently?</strong></li>
+	</section>
+	
+	<section class="card">
+	  <p><strong>What Would I Do Differently?</strong></p>
+		<ul class="list-group" >
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
 		</ul>
-	</div>		
+	</section>		
 		
 <!--			
 	<div class="alert alert-info" style="margin:20px">
