--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -5,13 +5,86 @@
             <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
             <link rel="stylesheet" href="css/style.css" type="text/css">
 			<link href="css/jquery.circliful.css" rel="stylesheet" type="text/css" />
+		  <style type="text/css">
+
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.card {
+			  padding:1rem 0rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			}
+			  strong {
+			    font-weight:300;
+			    color:#539D00;
+			  }
+
+			h2 {
+			  font-size:.9rem;
+			  line-height:2.5;
+			  color:gray;
+			  font-weight:400;
+			}
+
+		  </style>
 
 
 <title></title>
 </head>
 	<body>
-		<div class="alert alert-info" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;">
-			<div class="row" style="margin-top:-10px">
+		<section class="card">
+			<div class="row">
 				<div class="col-xs-7" style="margin-right:10px">
 					<span style="font-weight:400; font-size: 14px">Agreement Reached:</span>
 				</div>
@@ -37,7 +110,7 @@
 					<span style="font-weight:400; font-size: 14px; margin-left:5px">Satisfaction</span>
 				</div>
 			</div><br>
-		</div>
+		</section>
 				
 		<script src="jquery.js" type="text/javascript"></script>
 		<script src="jquery.circliful.min.js"></script>
