--- a/Negotiation3/reports/scorecard-summary.html
+++ b/Negotiation3/reports/scorecard-summary.html
@@ -3,30 +3,115 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-14.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+			canvas{
+			  width: 100% !important;
+		      max-width: 280px;
+		      height: 100% !important;
+			}
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.topcard {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  background-image: url("top-banner-14.png");
+			  background-repeat: no-repeat;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+
+			.card {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			  margin-top:11px;
+			}
+			  strong {
+			    font-weight:500;
+			    color:#ff9f33;
+			  }
+			h2 {
+			  font-size:1.25rem;
+			  color:#ff9f33;
+			  font-weight:400;
+			  margin-top:0px;
+			}
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-14.png" width="115px" height="115px" class="img-circle">
-	</div>
-    
-	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Negotiation 360&deg; will archive your scorecard for this negotiation and others that you will undertake. Also, the <b>MY BEST PRACTICES</b> section will compile your growing list of WWW and WWYDD take-aways. Be sure to consult that resource before your next negotiation. It will enable you to get the most out what you learn from experience and reflection.</p>
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-14.png" width="100px" height="100px" class="img-circle">
+		</div>
+		<p style="font-size:14px">Negotiation 360&deg; will archive your scorecard for this negotiation and others that you will undertake. Also, the <strong>My Best Practices</strong> section will compile your growing list of WWW and WWYDD take-aways. Be sure to consult that resource before your next negotiation. It will enable you to get the most out what you learn from experience and reflection.</p>
+	</section>
+	<section class="card">
+		<p style="font-size:14px">Make on-going learning a habit. Put a weekly reminder in your calendar to review the most interesting and instructive negotiation you undertake in the coming days. Keeping score on a regular basis only takes a few minutes, but the rewards can be tremendous.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Make on-going learning a habit. Put a weekly reminder in your calendar to review the most interesting and instructive negotiation you undertake in the coming days. Keeping score on a regular basis only takes a few minutes, but the rewards can be tremendous.</p>
-
-	</div>
+	</section>
 		 
 <!--			
 	<div class="alert alert-info" style="margin:20px">
