--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -96,15 +96,15 @@
 <body>
 	<div>
 		<section class="card">
-			<p>You rated yourself <strong style="color:#ff9f33">%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate your overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
+			<p style="font-size:14px">You rated yourself <strong style="color:#ff9f33">%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate your overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
 		</section>
 		<section class="card">
-			<p>Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whether other parties are cooperative or competitive.</p>
+			<p style="font-size:14px">Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whether other parties are cooperative or competitive.</p>
 		</section>
 		<section class="card">
-    		<p>Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
+    		<p style="font-size:14px">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
 		</section>
-    <p style="margin: 20px; font-size: 14px;"><strong>Here are some tips for improving your effectiveness:</strong></p>
+    <p style="margin: 20px; font-size: 14px; color:#ff9f33"><strong>Here are some tips for improving your effectiveness</strong></p>
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 20px;">
 	  <div class="panel panel-warning">
