--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -98,6 +98,29 @@
 			  font-weight:400;
 			  margin-top:0px;
 			}
+			.list-group-item {
+			  position: relative;
+			  display: block;
+			  font-size: 16px;
+			  text-align: center;
+			  padding: 10px 24px 15px 0px;
+			  margin-bottom: -1px;
+			  background-color: #ffffff;
+			  border-top: 1px solid #dddddd;
+			  border-bottom: 1px solid #dddddd;
+			}
+			.list-group-item:last-child {
+			  margin-bottom: 0;
+			  border-bottom-right-radius: 0px;
+			  border-bottom-left-radius: 0px;
+			  border-bottom: 0px solid #dddddd;
+			}
+			.list-group {
+			  padding-left: 0;
+			  margin-bottom: 0px;
+			}
+			
+			
     </style>
 </head>
 <body>
@@ -116,14 +139,14 @@
 	</section>
 		 
 	<section class="card">
-	  <p><strong>What Worked Well?</strong></p>
+	  <p style="font-size: 16px;"><strong>What Worked Well?</strong></p>
 		<ul class="list-group" >
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
 	</section>
 	
 	<section class="card">
-	  <p><strong>What Would I Do Differently?</strong></p>
+	  <p style="font-size: 16px;"><strong>What Would I Do Differently?</strong></p>
 		<ul class="list-group" >
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
 		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
