--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -3,29 +3,112 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-3.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+			canvas{
+			  width: 100% !important;
+		      max-width: 280px;
+		      height: 100% !important;
+			}
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.topcard {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  background-image: url("top-banner-3.png");
+			  background-repeat: no-repeat;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			  margin-top:11px;
+			}
+			  strong {
+			    font-weight:500;
+			    color:#ff9f33;
+			  }
+			h2 {
+			  font-size:1.25rem;
+			  color:#ff9f33;
+			  font-weight:400;
+			  margin-top:0px;
+			}
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-3.png" width="115px" height="115px" class="img-circle">
-	</div>
-	
-	<div>
-		<p style="margin: 20px;">Here's how your responses compare with others have taken this test:</p> 
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-3.png" width="100px" height="100px" class="img-circle">
+		</div>
+		<p>Here's how your responses compare with others have taken this test:</p> 
 	<div>
 		
-	<div style="margin: 20px;font-size: 13px">
+	<div style="font-size: 13px">
 		<table class="table table-bordered">
 			<thead>
 				<tr>
@@ -58,39 +141,38 @@
 			</tbody>
 		</table>	
 	</div>
+	</section>
 
-	<div>
-		<p style="margin: 20px;">Those are simply averages, of course. There's a lot of variation from one person to another. But note that people tend to be most confident about their ability to understand the needs and feelings of other people. By contrast, many worry about underperforming when it comes to results.</p> 
-	<div>
+	<section class="card">
+		<p>Those are simply averages, of course. There's a lot of variation from one person to another. But note that people tend to be most confident about their ability to understand the needs and feelings of other people. By contrast, many worry about underperforming when it comes to results.</p> 
+	</section>
 		
-	<div>
-		<p style="margin: 20px;">There is nothing basically good or bad if your scores match those averages. (Relatively few people have an exact match.)  In your experience, do you think other negotiators accurately assess their strengths and weaknesses? For example:</p> 
+	<section class="card">
+		<p>There is nothing basically good or bad if your scores match those averages. (Relatively few people have an exact match.)  In your experience, do you think other negotiators accurately assess their strengths and weaknesses? For example:</p> 
 
-		<ul style="margin: 20px 20px 20px 0px;">
+		<ul style="margin: 10px 0px 10px -20px;">
 			<li>Do most people you deal with actually get inferior results?</li>
 			<li>Do most negotiators you know really excel at understanding others?</li>
 		</ul>
-		
-		<p style="margin: 20px;">The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
-	<div>
+	</section>
+	<section class="card">
+		<p>The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
+	</section>
 	
-	<div class="alert alert-info" style="margin:20px">
+	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe030;" style="font-size: 24px"></span>
+				<span data-icon="&#xe030;" style="font-size: 24px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
 				You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap <strong>Next</strong> to see how these four essential skills are connected to one another.
 			</div>
 		</div>
-	</div>
+	</section>
 	
 	<div style="height:100px">
 	</div>
 
     <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="modules/exporting.js"></script>
 </body>
 </html>
