--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -107,17 +107,15 @@
 </head>
 	<body>
 		<section class="card">
-				<p style="font-size: 18px">Agreement Reached <strong>%@</strong>
-				</p>
-				<p style="font-size: 14px">%@
-				</p>
-				<br>
+				<p style="font-size: 18px; margin:0px 20px 20px 20px">Agreement Reached <strong>%@</strong></p>
+				<p style="font-size: 14px; margin:-10px 20px 0px 20px">%@</p>
 			<div class="row">
-				<div class="col-xs-6" style="margin-left:15px">
+				<div class="col-xs-2"></div>
+				<div class="col-xs-4">
 					<div id="importance" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-weight:400; font-size: 14px; font-size: 14px; margin-left:5px">Importance</span>
+					<span style="font-weight:400; font-size: 14px; font-size: 14px">Importance</span>
 				</div>
-				<div class="col-xs-5" style="font-size: 14px; line-height:1.14285714285714">
+				<div class="col-xs-4" style="font-size: 14px; line-height:1.14285714285714">
 					<div id="satisfaction" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
 					<span style="font-weight:400; font-size: 14px; margin-left:5px">Satisfaction</span>
 				</div>
