--- a/Negotiation3/reports/test1.html
+++ b/Negotiation3/reports/test1.html
@@ -3,36 +3,121 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-4.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+			canvas{
+			  width: 100% !important;
+		      max-width: 280px;
+		      height: 100% !important;
+			}
+
+			header {
+			  position:absolute;
+			  z-index:0;
+			  top:0; left:0; right:0;
+			  height:10rem;
+			  transition:transform .5s, opacity .3s;
+			  background-size:cover;
+			}
+
+			.topcard {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  background-image: url("top-banner-4.png");
+			  background-repeat: no-repeat;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card {
+			  padding:1rem 1rem;
+			  box-shadow:0 1px 2px #aaa;
+			  background:white;
+			  margin: 1.5rem 1rem;
+			  border-radius:3px;
+			  user-select:none;
+			  animation:fly-in-from-left .5s 1s ease both;
+			  transform-origin:top left;
+			}
+			.card:nth-child(even){
+			  animation-name:fly-in-from-right;
+			  animation-delay:1.1s;
+			 transform-origin:top right;
+			}
+
+			@keyframes fly-in-from-left {
+			  from {
+			    transform:translateY(15rem) rotate(15deg);
+			    opacity:0;
+			  }
+			}
+
+			@keyframes fly-in-from-right {
+			  from {
+			    transform:translateY(15rem) rotate(-15deg);
+			    opacity:0;
+			  }
+			}
+
+			.card:after {
+			  position:absolute;
+			  font-size:.9rem;
+			  top:1.5rem;
+			  right:1rem;
+			  border:thin solid gray;
+			  color:gray;
+			  width:1rem;
+			  line-height:1rem;
+			  text-align:center;
+			  border-radius:50%;
+			  pointer-events:none;
+			}
+
+			h1 {
+			  font-size:2rem;
+			  font-weight:200;
+			  margin-top:11px;
+			}
+			  strong {
+			    font-weight:500;
+			    color:#ff9f33;
+			  }
+			h2 {
+			  font-size:1.25rem;
+			  color:#ff9f33;
+			  font-weight:400;
+			  margin-top:0px;
+			}
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-4.png" width="115px" height="115px" class="img-circle">
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-4.png" width="100px" height="100px" class="img-circle">
+		</div>
+    <div style="margin:-20px 0px 0px 0px">
+		<h4 style="font-weight:400; color:#ff9f33">Part A</h4>
 	</div>
-    <div style="margin:-40px 20px 20px 20px">
-		<h4 style="font-weight:400">Part A</h4>
-	</div>
-	
 	<div>
-		<p style="margin: 20px;">Start by rating your relative strength in respect to four essential negotiation skills. You have a total of <strong>16 points</strong> to allocate overall.</p>
+		<p>Start by rating your relative strength in respect to four essential negotiation skills. You have a total of <strong>16 points</strong> to allocate overall.</p>
+	</section>
 
-        <p style="margin: 20px;">Remember, you're not judging how good you are at a particular skill. Instead, you're identifying what you are better at - and where else you're not as strong.</p>
+	<section class="card">
+        <p>Remember, you're not judging how good you are at a particular skill. Instead, you're identifying what you are better at - and where else you're not as strong.</p>
 
-        <p style="margin: 20px;">Think about your skills in the kind of negotiations that you often do, or that are most important to you. Be sure you use all 16 points - no more; no less, then tap <strong>Next</strong> above.</p>
-	</div>
+        <p>Think about your skills in the kind of negotiations that you often do, or that are most important to you. Be sure you use all 16 points - no more; no less, then tap <strong>Next</strong> above.</p>
 
-	</div>
+	</card>
 
 
     <script src="jquery.js"></script>
