scorecard and start of practices html edits

--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -107,7 +107,7 @@
 	window.onload = function(){
 		var ctx = document.getElementById("canvas").getContext("2d");
 		window.myRadarChart = new Chart(ctx).Radar(radarChartData, {
-			responsive: true,
+			responsive: false,
 			maintainAspectRatio: false,
 			showScale: true,
 			scaleShowLine : false,
