--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -7,90 +7,129 @@
 
   <style type="text/css">
 
-    * {
-      padding: 0;
-      margin: 0;
-      border: 0;
-    }
 
-    body {
-	  background: #fff;
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
+	header {
+	  position:absolute;
+	  z-index:0;
+	  top:0; left:0; right:0;
+	  height:10rem;
+	  transition:transform .5s, opacity .3s;
+	  background-size:cover;
+	}
 
-    #demo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      visibility: hidden;
-      cursor: hand;
-      cursor: -moz-grab;
-      cursor: -webkit-grab;
-      cursor: grab;
-    }
+	.card {
+	  padding:1rem 0rem;
+	  box-shadow:0 1px 2px #aaa;
+	  background:white;
+	  margin: 1.5rem 1rem;
+	  border-radius:3px;
+	  user-select:none;
+	  animation:fly-in-from-left .5s 1s ease both;
+	  transform-origin:top left;
+	}
+	.card:nth-child(even){
+	  animation-name:fly-in-from-right;
+	  animation-delay:1.1s;
+	 transform-origin:top right;
+	}
 
-    #demo p {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 0 20px;
-      margin-bottom: 15px;
-    }
+	@keyframes fly-in-from-left {
+	  from {
+	    transform:translateY(15rem) rotate(15deg);
+	    opacity:0;
+	  }
+	}
+
+	@keyframes fly-in-from-right {
+	  from {
+	    transform:translateY(15rem) rotate(-15deg);
+	    opacity:0;
+	  }
+	}
+
+	.card:after {
+	  position:absolute;
+	  font-size:.9rem;
+	  top:1.5rem;
+	  right:1rem;
+	  border:thin solid gray;
+	  color:gray;
+	  width:1rem;
+	  line-height:1rem;
+	  text-align:center;
+	  border-radius:50%;
+	  pointer-events:none;
+	}
+
+	h1 {
+	  font-size:2rem;
+	  font-weight:200;
+	}
+	  strong {
+	    font-weight:300;
+	    color:#539D00;
+	  }
+
+	h2 {
+	  font-size:.9rem;
+	  line-height:2.5;
+	  color:gray;
+	  font-weight:400;
+	}
 
   </style>
 
     
 </head>
 <body>
-    <div id="container" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;"></div>
-    <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="modules/exporting.js"></script>
-    <script src="minimal.js"></script>
+	<body>
+	    <section class="card">
+			<canvas id="canvas"></canvas>
+		</section>
+	    <script src="Chart.js"></script>
 
-    <script>
-	$(function () {
-
-	    $(document).ready(function () {
-
-	        // Build the chart
-	        $('#container').highcharts({
-	            title: {
-	                text: 'Agreement Rate'
-	            },
-	            tooltip: {
-	                pointFormat: '<b>{point.percentage:.1f}%</b>'
-	            },
-	            plotOptions: {
-	                pie: {
-	                    allowPointSelect: true,
-	                    cursor: 'pointer',
-	                    dataLabels: {
-	                        enabled: false
-	                    },
-	                    showInLegend: true
-	                }
-	            },
-				credits: {
-				      enabled: false
+		<script>
+		var pieData = [
+				{
+					value: %li,
+					color:"#F7464A",
+					highlight: "#FF5A5E",
+					label: "Red"
 				},
-				exporting: { 
-						enabled: false 
+				{
+					value: %li,
+					color: "#46BFBD",
+					highlight: "#5AD3D1",
+					label: "Green"
 				},
-	            series: [{
-	                type: 'pie',
-	                data: [
-	                    ['Yes', %li],
-	                    ['No', %li],
-	                    ['Not yet', %li]
-	                ]
-	            }]
-	        });
-	    });
+				{
+					value: %li,
+					color: "#FDB45C",
+					highlight: "#FFC870",
+					label: "Yellow"
+				}
 
-	});
-    </script>
+			];
+
+			window.onload = function(){
+				var ctx = document.getElementById("canvas").getContext("2d");
+				window.myPie = new Chart(ctx).Pie(pieData, {
+					responsive: true,
+					maintainAspectRatio: false,
+					showScale: true,
+					scaleShowLine : false,
+					scaleShowLabels : false,
+					pointLabelFontSize : 12,
+					pointLabelFontFamily : "'Helvetica Neue'",
+					pointLabelFontColor : "gray",
+				    animationSteps: 100,
+				    scaleOverride: true,
+				    scaleSteps: 2,
+				    scaleStepWidth: 4,
+				    scaleStartValue: 0
+				});
+			};
+
+		</script>
 </body>
 </html>
