--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -42,7 +42,7 @@
 					  transform-origin:top left;
 					}
 					.card {
-					  padding:1rem 1rem;
+					  padding:0.1rem 1rem;
 					  box-shadow:0 1px 2px #aaa;
 					  background:white;
 					  margin: 1.5rem 1rem;
@@ -84,6 +84,9 @@
 					  border-radius:50%;
 					  pointer-events:none;
 					}
+					p {
+					  margin: 6px 0 6px 0;
+					}
 
 					h1 {
 					  font-size:2rem;
@@ -107,8 +110,8 @@
 </head>
 	<body>
 		<section class="card">
-				<p style="font-size: 18px; margin:0px 20px 20px 20px">Agreement Reached <strong>%@</strong></p>
-				<p style="font-size: 14px; margin:-10px 20px 0px 20px">%@</p>
+				<p style="font-size: 18px;line-height:1.14285714285714">Agreement Reached <strong>%@</strong></p>
+				<p style="font-size: 13px;line-height:1.14285714285714">%@</p>
 			<div class="row">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-4">
