--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -29,7 +29,7 @@
 	}
 
 	.card {
-	  padding:1rem 1rem;
+	  padding:0.5rem 1rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
 	  margin: 1.5rem 1rem;
@@ -101,7 +101,7 @@
 	<div class="owl-carousel" style="margin: 10px 0px 0px 0px;">
     	<div class="owl-item">
 			<section class="card">
-				<p>We used statistical tools to analyze responses from other negotiators who have taken this test.  In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average that we received in our pre-launch survey.</p>
+				<p>We used statistical tools to analyze responses from other negotiators who have taken this test.  In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average that we received in our pre-launch survey.</p><br>
 				<canvas id="canvas"></canvas>
 			</section>
 			<section class="card">
@@ -197,7 +197,7 @@
 
 	<script>
 	var radarChartData = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 		{
 			label: "My First dataset",
@@ -233,7 +233,7 @@
 	};
 
 	var radarChartData2 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 		{
 			label: "My First dataset",
@@ -289,7 +289,7 @@
 	};
 
 	var radarChartData3 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -305,7 +305,7 @@
 	};
 	
 	var radarChartData4 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -321,7 +321,7 @@
 	};
 	
 	var radarChartData5 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -337,7 +337,7 @@
 	};
 	
 	var radarChartData6 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -353,7 +353,7 @@
 	};
 	
 	var radarChartData7 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -376,7 +376,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 600,
@@ -394,8 +394,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
-			pointLabelFontFamily : "'Helvetica Neue'",
+			pointLabelFontSize : 11,
 			pointLabelFontColor : "gray",
 		    animationSteps: 700,
 		    scaleOverride: true,
@@ -411,7 +410,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 800,
@@ -428,7 +427,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 900,
@@ -445,7 +444,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 1000,
@@ -462,7 +461,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 1100,
@@ -479,7 +478,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 1200,
