--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -28,7 +28,7 @@
 		}
 
 		.topcard {
-		  padding:1rem 1rem;
+		  padding:1rem 1rem 0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1.5rem 1rem;
@@ -41,7 +41,7 @@
 		}
 
 		.selfasesscard {
-		  padding:1rem 1rem;
+		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1.5rem 1rem;
@@ -54,7 +54,7 @@
 		}
 
 		.scorecardcard {
-		  padding:1rem 1rem;
+		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1.5rem 1rem;
@@ -67,7 +67,7 @@
 		}
 
 		.bestpracticescard {
-		  padding:1rem 1rem;
+		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1.5rem 1rem;
@@ -80,7 +80,7 @@
 		}
 
 		.card {
-		  padding:1rem 1rem;
+		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1.5rem 1rem;
