--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -28,8 +28,18 @@
 	  background-size:cover;
 	}
 
+	.topcard {
+	  padding:0.25rem 1rem 0.5rem 1rem;
+	  box-shadow:0 1px 2px #aaa;
+	  background:white;
+	  margin: 1.5rem 1rem;
+	  border-radius:3px;
+	  user-select:none;
+	  animation:fly-in-from-left .5s 1s ease both;
+	  transform-origin:top left;
+	}
 	.card {
-	  padding:0.25rem 1rem;
+	  padding:0.5rem 1rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
 	  margin: 1.5rem 1rem;
@@ -101,7 +111,7 @@
 	<div class="owl-carousel" style="margin: 10px 0px 0px 0px;">
  
    		<div class="owl-item">
-			<section class="card">
+			<section class="topcard">
 				<h1>Relational Dimension</h1>
 				<canvas id="canvas"></canvas>
 			</section>
@@ -112,7 +122,7 @@
 		</div>
 
 		<div class="owl-item">	
-			<section class="card">
+			<section class="topcard">
 				<h1>Outcome Dimension</h1>
 				<canvas id="canvas2"></canvas>
 			</section>
@@ -123,7 +133,7 @@
 		</div>
 
       	<div class="owl-item">
-			<section class="card">			
+			<section class="topcard">			
 				<h1>Linking Means and Ends</h1>
 				<canvas id="canvas3"></canvas>
 			</section>
@@ -141,7 +151,7 @@
 
 	<script>
 	var radarChartData = {
-		labels: ['', 'Empathy', '', 'Assert'],
+		labels: ['', 'EMPATHY', '', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -157,7 +167,7 @@
 	};
 
 	var radarChartData2 = {
-		labels: ['Creating Value', '', 'Claiming Value', ''],
+		labels: ['CREATING VALUE', '', 'CLAIMING VALUE', ''],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -173,7 +183,7 @@
 	};
 
 	var radarChartData3 = {
-		labels: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
+		labels: ['CREATING VALUE', 'EMPATHY', 'CLAIMING VALUE', 'ASSERT'],
 		datasets: [
 			{
 				label: "My Negotiation Profile",
@@ -196,7 +206,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 600,
@@ -213,7 +223,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 800,
@@ -230,7 +240,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 12,
+			pointLabelFontSize : 11,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 1000,
