--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -29,7 +29,7 @@
 			}
 
 			.card {
-			  padding:1rem 1rem;
+			  padding:1rem 1rem 0.5rem 1rem;
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1.5rem 1rem;
@@ -85,6 +85,28 @@
 			  font-weight:400;
 			  margin-top:0px;
 			}
+			.list-group-item {
+			  position: relative;
+			  display: block;
+			  font-size: 16px;
+			  text-align: center;
+			  padding: 10px 24px 15px 0px;
+			  margin-bottom: -1px;
+			  background-color: #ffffff;
+			  border-top: 1px solid #dddddd;
+			  border-bottom: 1px solid #dddddd;
+			}
+			.list-group-item:last-child {
+			  margin-bottom: 0;
+			  border-bottom-right-radius: 0px;
+			  border-bottom-left-radius: 0px;
+			  border-bottom: 0px solid #dddddd;
+			}
+			.list-group {
+			  padding-left: 0;
+			  margin-bottom: 0px;
+			}
+			
     </style>
 </head>
 <body>
