--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -30,7 +30,7 @@
 					}
 
 					.topcard {
-					  padding:1rem 1rem;
+					  padding:1rem 1rem 0.5rem 1rem;
 					  box-shadow:0 1px 2px #aaa;
 					  background:white;
 					  margin: 1.5rem 1rem;
